--- a/post/2017-12-21-skip-errors-in-r-by-not-writing-loops.Rmd
+++ b/post/2017-12-21-skip-errors-in-r-by-not-writing-loops.Rmd
@@ -5,7 +5,7 @@ categories: ["Tips"]
 tags: ["Purrr"]
 author: "Bruno Rodrigues (guest)"
 banner : "images/prison_escape.svg"
-description : "Avoid loops that stop mid-way by using `safety()` and `possibly()` from purrr... and not using loops in the first place. Let me show you what I mean through examples."
+description : "Avoid loops that stop mid-way by using `safely()` and `possibly()` from purrr... and not using loops in the first place. Let me show you what I mean through examples."
 weight: 1
 ---
 
